sfSandBoxCode/force-app/main/default/objects/Missed_Collection_Reason__c/Missed_Collection_Reason__c.object-meta.xml
<CustomObject>
    <label>Missed Collection Reason</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Missed Collection Reason Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missed Collection Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>