sfSandBoxCode/force-app/main/default/objects/Missed_Collection_Reason__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>TextArea</type>
</CustomField>