sfSandBoxCode/force-app/main/default/objects/Missed_Collection_Reason__c/fields/Collect__c.field-meta.xml
<CustomField>
    <fullName>Collect__c</fullName>
    <label>Collect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>