sfSandBoxCode/force-app/main/default/objects/Missed_Collection_Reason__c/fields/Data_Needed__c.field-meta.xml
<CustomField>
    <fullName>Data_Needed__c</fullName>
    <label>Data Needed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>