sfSandBoxCode/force-app/main/default/objects/Missed_Collection_Reason__c/fields/Team_To_Investigate__c.field-meta.xml
<CustomField>
    <fullName>Team_To_Investigate__c</fullName>
    <label>Team To Investigate</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOPS</fullName>
            </value>
            <value>
                <fullName>LOG</fullName>
            </value>
            <value>
                <fullName>SOPS AND LOG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>