sfSandBoxCode/force-app/main/default/objects/Missed_Collection_Reason__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Team_To_Investigate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>